<resources>
    <string name="app_name">PodlodkaUIClassic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="failed_to_add_session_to_favorites">Не удалось добавить сессию в избранное</string>
    <string name="speaker">speaker</string>
    <string name="date">date</string>
    <string name="timeinterval">timeInterval</string>
    <string name="description">description</string>
    <string name="session_date">session date</string>
    <string name="sessions">Сессии</string>
    <string name="fav">Избранное</string>
    <string name="search">Поиск</string>
</resources>